--- a/TodoAPI/appsettings.Development.json
+++ b/TodoAPI/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    //"DbConnection": "Server = localhost;Initial Catalog = TestApiCrud; ;User ID = SA; Password = Pass@Word1"
+    //"DbConnection": "Server = localhost;Initial Catalog = TestApiCrud;User ID = SA; Password = Pass@Word1"
     "DbConnection": "Server=tcp:dotnett-sql.database.windows.net,1433;Initial Catalog=TestApiCrud;Persist Security Info=False;User ID=sqladmin;Password=admin@2022;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=0;"
   },
   "Logging": {
